--- a/style.css
+++ b/style.css
@@ -52,6 +52,39 @@ button {
     align-self: center;
 }
 
+dialog {
+    height: 315px;
+    width: 250px;
+    background-color: whitesmoke;
+    border: 2px solid black;
+    border-radius: 8px;
+    margin: auto auto;
+    padding: 8px;
+    & input {
+        margin-top: 8px;
+        margin-bottom: 8px;
+        padding: 6px;
+        height: 40px;
+        width: 230px;
+        font-size: 1.3rem;
+    }
+    div {
+        font-size: 1.3rem;
+        text-align: center;
+    }
+    #confirm-button {
+        background-color: lightgreen;
+        font-size: 1.3rem;
+        width: 100%;
+        border-radius: 6px;
+        border: 0;
+    }
+}
+
+::backdrop {
+    background-color: rgba(105, 105, 105, 0.75);
+}
+
 .book-card {
     border: 2px solid black;
     border-radius: 8px;
@@ -67,7 +100,6 @@ button {
         border: 0;
         margin-top: 5px;
         margin-bottom: 5px;
-        content: "Read";
     }
     & .notread-button {
         width: 100%;
@@ -76,7 +108,6 @@ button {
         border: 0;
         margin-top: 5px;
         margin-bottom: 5px;
-        content: "Not Read";
     }
     & .rmv-button {
         width: 100%;
