--- a/style.css
+++ b/style.css
@@ -1,123 +1,194 @@
+/* TYPOGRAPHY */
+/* Font Sizing Scale (px) */
+/* 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98 */
+/* Font Weights */
+
+/* Line Heights */
+
+/* Letter Spacing */
+
+/* COLORS */
+/* 
+Main: #29ADB2
+tints: 
+shades:
+
+True Gray: #555
+
+Grey: #003049
+tints:
+shades:
+
+Accent: #0766AD
+tints:
+shades:
+
+Accent: #C5E898
+tints:
+shades:
+
+Accent: #F3F3F3
+tints:
+shades:
+*/
+
+/* BOX SHADOWS */
+/* box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.3); */
+/* box-shadow: 0 0 1rem 0.5rem #eae2b74a; */
+
+/* BORDER RADIUSES */
+/* 9px */
+
+/* WHITESPACE  */
+/* Spacing Scale (px) */
+/* 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128 */
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap');
 
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: "Roboto", sans-serif;
-}
-
+*,
 *::before,
 *::after {
-    box-sizing: inherit;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-header,
-footer {
-    background-color: whitesmoke;
-    width: 100vw;
-    text-align: center;
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
-    background-color: lightgray;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1;
+  font-weight: 400;
+  color: #0766ad;
+  font-size: 1.8rem;
+  background-color: #29adb2;
+
+  display: flex;
+  flex-direction: column;
 }
 
-main {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+.header,
+.footer {
+  background-color: #c5e898;
+  width: 100vw;
+  text-align: center;
+  color: #0766ad;
+}
+.header {
+  padding: 1.8rem 0;
+}
+.footer {
+  padding: 1.2rem 0;
+  position: fixed;
+  bottom: 0;
+}
+.footer-link:link,
+.footer-link:visited {
+  text-decoration: none;
+  color: #0766ad;
+  transition: all 300ms;
+}
+.footer-link:hover,
+.footer-link:active {
+  color: #29adb2;
+}
+
+.main {
+  /* flex: 1;
+  display: flex;
+  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
 }
 
 .bookshelf {
-    align-self: center;
-    width: min(80vw, 700px);
-    display: grid;
-    gap: 20px;
-    grid-template-columns: repeat(auto-fit, 200px);
-    grid-auto-rows: 145px;
-    justify-content: center;
+  align-self: center;
+  width: min(80vw, 700px);
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fit, 200px);
+  grid-auto-rows: 145px;
+  justify-content: center;
 }
 
 button {
+  padding: 6px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.btn-form-open {
+  width: 100px;
+  align-self: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.dialog {
+  height: 315px;
+  width: 250px;
+  background-color: whitesmoke;
+  border: 2px solid black;
+  border-radius: 8px;
+  margin: auto auto;
+  padding: 8px;
+  & input {
+    margin-top: 8px;
+    margin-bottom: 8px;
     padding: 6px;
-    font-family: "Roboto", sans-serif;
-}
-
-.add-button {
-    width: 100px;
-    align-self: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-dialog {
-    height: 315px;
-    width: 250px;
-    background-color: whitesmoke;
-    border: 2px solid black;
-    border-radius: 8px;
-    margin: auto auto;
-    padding: 8px;
-    & input {
-        margin-top: 8px;
-        margin-bottom: 8px;
-        padding: 6px;
-        height: 40px;
-        width: 230px;
-        font-size: 1.3rem;
-    }
-    div {
-        font-size: 1.3rem;
-        text-align: center;
-    }
-    #confirm-button {
-        background-color: lightgreen;
-        font-size: 1.3rem;
-        width: 100%;
-        border-radius: 6px;
-        border: 0;
-    }
+    height: 40px;
+    width: 230px;
+    font-size: 1.3rem;
+  }
+  div {
+    font-size: 1.3rem;
+    text-align: center;
+  }
+  #confirm-button {
+    background-color: lightgreen;
+    font-size: 1.3rem;
+    width: 100%;
+    border-radius: 6px;
+    border: 0;
+  }
 }
 
 ::backdrop {
-    background-color: rgba(105, 105, 105, 0.75);
+  background-color: rgba(105, 105, 105, 0.75);
 }
 
 .book-card {
-    border: 2px solid black;
-    border-radius: 8px;
-    padding: 8px;
-    background-color: whitesmoke;
-    width: 200px;
-    overflow: hidden;
-    & .read-button {
-        width: 100%;
-        background-color: lightgreen;
-        border-radius: 6px;
-        border: 0;
-        margin-top: 5px;
-        margin-bottom: 5px;
-    }
-    & .notread-button {
-        width: 100%;
-        background-color: goldenrod;
-        border-radius: 6px;
-        border: 0;
-        margin-top: 5px;
-        margin-bottom: 5px;
-    }
-    & .rmv-button {
-        width: 100%;
-        background-color: rgb(255, 70, 70);
-        border-radius: 6px;
-        border: 0;
-    }
-    & .centered {
-        text-align: center;
-    }
+  border: 2px solid black;
+  border-radius: 8px;
+  padding: 8px;
+  background-color: whitesmoke;
+  width: 200px;
+  overflow: hidden;
+}
+.read-button {
+  width: 100%;
+  background-color: lightgreen;
+  border-radius: 6px;
+  border: 0;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.notread-button {
+  width: 100%;
+  background-color: goldenrod;
+  border-radius: 6px;
+  border: 0;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.rmv-button {
+  width: 100%;
+  background-color: rgb(255, 70, 70);
+  border-radius: 6px;
+  border: 0;
+}
+.centered {
+  text-align: center;
 }
