--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-/* TYPOGRAPHY */
-/* Font Sizing Scale (px) */
-/* 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98 */
-/* Font Weights */
-
-/* Line Heights */
-
-/* Letter Spacing */
-
 /* COLORS */
 /* 
 Main: #29ADB2
@@ -32,16 +23,9 @@ tints:
 shades:
 */
 
-/* BOX SHADOWS */
-/* box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.3); */
-/* box-shadow: 0 0 1rem 0.5rem #eae2b74a; */
-
 /* BORDER RADIUSES */
 /* 9px */
-
-/* WHITESPACE  */
-/* Spacing Scale (px) */
-/* 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128 */
+/* 6px */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap');
 
@@ -129,9 +113,9 @@ button {
 .dialog {
   height: 315px;
   width: 250px;
-  background-color: whitesmoke;
+  background-color: #e5e7eb;
   border: 2px solid black;
-  border-radius: 8px;
+  border-radius: 9px;
   margin: auto auto;
   padding: 8px;
   & input {
@@ -146,8 +130,8 @@ button {
     font-size: 1.3rem;
     text-align: center;
   }
-  #confirm-button {
-    background-color: lightgreen;
+  #btn-confirm {
+    background-color: #c5e898;
     font-size: 1.3rem;
     width: 100%;
     border-radius: 6px;
@@ -161,15 +145,15 @@ button {
 
 .book-card {
   border: 2px solid black;
-  border-radius: 8px;
+  border-radius: 9px;
   padding: 8px;
-  background-color: whitesmoke;
+  background-color: #f5f5f5;
   width: 200px;
   overflow: hidden;
 }
 .read-button {
   width: 100%;
-  background-color: lightgreen;
+  background-color: #c5e898;
   border-radius: 6px;
   border: 0;
   margin-top: 5px;
@@ -177,7 +161,7 @@ button {
 }
 .notread-button {
   width: 100%;
-  background-color: goldenrod;
+  background-color: #e5e7eb;
   border-radius: 6px;
   border: 0;
   margin-top: 5px;
@@ -185,7 +169,7 @@ button {
 }
 .rmv-button {
   width: 100%;
-  background-color: rgb(255, 70, 70);
+  background-color: #f87171;
   border-radius: 6px;
   border: 0;
 }
